# iptf-pocs

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE-MIT  README.md
libs/binius-mayo/: Cargo.toml  README.md
libs/binius-mayo/benches/: prove_verify.rs
libs/binius-mayo/examples/: mayo2_e2e.rs
libs/binius-mayo/src/: api.rs  lib.rs  params.rs  quadratic.rs  shake256.rs  util.rs  verify.rs  whipping.rs
libs/binius-mayo/src/gf16/: mod.rs  mul.rs  scalar.rs  transpose.rs
libs/binius-mayo/tests/: api_tests.rs  kat_sweep.rs  oracle_tests.rs  verify_tests.rs
libs/binius-mayo/tests/common/: kat.rs  mod.rs  oracle.rs
pocs/approach-private-trade-settlement/tee_swap/: .gitignore  Cargo.toml  Dockerfile.enclave  Nargo.toml  README.md  SPEC.md  config.toml.example  deployments.toml  foundry.toml
pocs/approach-private-trade-settlement/tee_swap/circuits/spend/: Nargo.toml
pocs/approach-private-trade-settlement/tee_swap/circuits/transfer/: Prover.toml
pocs/approach-private-trade-settlement/tee_swap/contracts/script/: Deploy.s.sol  TeeSwap.s.sol
pocs/approach-private-trade-settlement/tee_swap/contracts/src/: TeeLock.sol  TeeSwap.sol
pocs/approach-private-trade-settlement/tee_swap/contracts/test/: TeeLock.t.sol  TeeSwap.t.sol
pocs/approach-private-trade-settlement/tee_swap/scripts/: enclave-entrypoint.sh
pocs/approach-private-trade-settlement/tee_swap/src/lib/: coordinator.rs  domain.rs  lib.rs  party.rs
pocs/civic-participation/resilient-civic-participation/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  SPEC.md  deployments.toml  foundry.toml
pocs/civic-participation/resilient-civic-participation/circuits/: Nargo.toml
pocs/civic-participation/resilient-civic-participation/circuits/batch/: Nargo.toml
pocs/civic-participation/resilient-civic-participation/circuits/lib/: Nargo.toml
pocs/civic-participation/resilient-civic-participation/circuits/resolution/: Nargo.toml
pocs/civic-participation/resilient-civic-participation/circuits/signer/: Nargo.toml
pocs/civic-participation/resilient-civic-participation/contracts/script/: Deploy.s.sol
pocs/civic-participation/resilient-civic-participation/contracts/src/: PetitionRegistry.sol
pocs/civic-participation/resilient-civic-participation/contracts/test/: PetitionRegistry.t.sol
pocs/civic-participation/resilient-civic-participation/scripts/: generate-verifiers.sh
pocs/civic-participation/resilient-civic-participation/src/: blob.rs  clock.rs  error.rs  fsrt.rs  imt.rs  lib.rs  poseidon.rs  predicate.rs  types.rs
pocs/civic-participation/resilient-civic-participation/tests/: anvil_harness.rs  dispute_won_class_tag_out_of_set.rs  duplicate_nullifier_across_batches_rejected.rs  golden_path.rs  lifecycle_boundaries.rs
pocs/diy-validium/: CHANGELOG.md  Cargo.toml  PHASE2-SPEC-REVIEW.md  PHASE3-SPEC-REVIEW.md  PLAN.md  README.md  REQUIREMENTS.md  SECURITY-REVIEW-PHASE1.md  SPEC.md
pocs/diy-validium/contracts/: foundry.toml
pocs/diy-validium/contracts/script/: Deploy.s.sol
pocs/diy-validium/contracts/src/: BalanceVerifier.sol  DisclosureVerifier.sol  MembershipVerifier.sol  TransferVerifier.sol  ValidiumBridge.sol
pocs/diy-validium/contracts/test/: BalanceVerifier.t.sol  DisclosureVerifier.t.sol  MembershipVerifier.t.sol  TransferVerifier.t.sol  ValidiumBridge.t.sol
pocs/diy-validium/host/: Cargo.toml
pocs/diy-validium/host/src/: accounts.rs  journal.rs  lib.rs  main.rs  merkle.rs
pocs/diy-validium/host/tests/: account_store.rs  balance_circuit.rs  disclosure_circuit.rs  e2e_escape_hatch.rs  e2e_integration.rs  membership_circuit.rs  transfer_circuit.rs  withdrawal_circuit.rs
pocs/diy-validium/methods/: build.rs
pocs/diy-validium/methods/guest/: Cargo.toml
pocs/diy-validium/methods/guest/crypto/: Cargo.toml
pocs/diy-validium/methods/src/: lib.rs
pocs/private-bond/custom-utxo/wallet/: .gitignore  Cargo.toml
pocs/private-identity/resilient-private-identity/: .gitignore  Cargo.toml  Nargo.toml  README.md  SPEC.md  deployments.toml  foundry.toml
pocs/private-identity/resilient-private-identity/examples/: bench_proving.rs
pocs/private-identity/resilient-private-identity/scripts/: generate-verifiers.sh
pocs/private-identity/resilient-private-identity/src/: client.rs  error.rs  lib.rs  poseidon.rs  types.rs  vc.rs
pocs/private-identity/resilient-private-identity/tests/: integration.rs
pocs/private-payment/plasma/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
pocs/private-payment/plasma/src/: harness.rs
pocs/private-payment/plasma/tests/: integration.rs
pocs/private-payment/resilient-disbursement-rails/: .env.example  .gitignore  Cargo.toml  Nargo.toml  README.md  SPEC.md  deployments.toml  foundry.toml
pocs/private-payment/resilient-disbursement-rails/examples/: bench_proving.rs
pocs/private-payment/resilient-disbursement-rails/scripts/: generate-verifiers.sh
pocs/private-payment/resilient-disbursement-rails/src/: clock.rs  error.rs  lib.rs  poseidon.rs  types.rs
pocs/private-payment/resilient-disbursement-rails/tests/: cross_card_spend_rejected.rs  cross_chain_replay_rejected.rs  double_claim_rejected.rs  golden_path.rs  h_header_parity.rs  non_cohort_member_rejected.rs  partial_claim_residual.rs  proof_stealing_rejected.rs  wrong_recipient_rejected.rs
pocs/private-payment/shielded-pool/: .env.example  Cargo.toml  Nargo.toml  README.md  SPEC.md  deployments.toml  rust-toolchain.toml
pocs/private-payment/shielded-pool-extension/: .env.example  .gitignore  Cargo.toml  Nargo.toml  README.md  SPEC.md  foundry.toml
pocs/private-payment/shielded-pool-extension/scripts/: generate-verifiers.sh
pocs/private-payment/shielded-pool-extension/tests/: integration.rs  light_client.rs
pocs/private-payment/shielded-pool/examples/: bench_proving.rs
pocs/private-payment/shielded-pool/scripts/: generate-verifiers.sh
pocs/private-payment/shielded-pool/tests/: integration.rs
pocs/private-trade-settlement/tee_swap/: Cargo.toml  Dockerfile.enclave  SPEC.md  deployments.toml  foundry.toml
pocs/private-trade-settlement/tee_swap/scripts/: generate-verifiers.sh
(+438 files in other folders)
