[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# RISC Zero
risc0-zkvm = "3.0"
risc0-build = "3.0"

# Crypto
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hex encoding
hex = "0.4"
