[package]
name = "tee_swap"
version = "0.1.0"
authors = ["Meyanis95 <yanis.meziane@essec.edu>"]
edition = "2024"

[lib]
path = "src/lib/lib.rs"

[dependencies]
# Poseidon
light-poseidon = "0.4.0"
ark-bn254 = "0.5"

# Grumpkin / arkworks
ark-grumpkin = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"

# Ethereum types
alloy-primitives = "1"

# Merkle tree
zk-kit-lean-imt = "0.1"

# Async
tokio = { version = "1", features = ["sync", "macros", "rt"] }

# Util
thiserror = "2.0"
rand = "0.8"
