[package]
name = "resilient_civic_participation"
version = "0.1.0"
authors = ["rymnc <43716372+rymnc@users.noreply.github.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
# Crypto
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"
ark-ec = { version = "0.5", features = ["parallel"] }
ark-ff = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-std = "0.5"
light-poseidon = "0.4"
lean-imt = { package = "zk-kit-lean-imt", version = "0.1.1" }
sha2 = "0.10"
sha3 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
num-bigint = "0.4"

c-kzg = "2.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"

# Util
thiserror = "2"
rand = "0.8"
getrandom = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tempfile = "3"

alloy = { version = "1", features = [
    "providers",
    "signers",
    "contract",
    "sol-types",
    "node-bindings",
    "network",
    "transports",
    "transport-http",
    "rpc-types",
    "consensus",
    "eips",
] }

[features]
default = []
test-mocks = []

[dev-dependencies]
tokio-test = "0.4"
