[package]
name = "diy-validium-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
risc0-zkvm.workspace = true
sha2.workspace = true
serde.workspace = true
bincode.workspace = true
clap.workspace = true
anyhow.workspace = true
hex.workspace = true

# Local methods crate for guest ELF binaries
methods = { path = "../methods" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "1", features = ["node-bindings", "sol-types", "contract", "json-abi", "signer-local", "provider-http"] }
serde_json = "1.0"
risc0-ethereum-contracts = "3.0"
