[package]
name = "resilient-private-identity"
version = "0.1.0"
authors = ["rymnc <43716372+rymnc@users.noreply.github.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
light-poseidon = "0.4"
ark-bn254 = "0.5"
ark-ec = { version = "0.5", features = ["parallel"] }
ark-ff = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-std = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
zk-kit-lean-imt = "0.1.1"

[dev-dependencies]
alloy = { version = "1", features = [
    "providers",
    "signers",
    "contract",
    "sol-types",
    "node-bindings",
    "network",
    "transports",
    "transport-http",
    "rpc-types",
] }
