[package]
name = "resilient_disbursement_rails"
version = "0.1.0"
authors = ["rymnc <43716372+rymnc@users.noreply.github.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
# Crypto
ark-bn254 = "0.5"
ark-ec = { version = "0.5", features = ["parallel"] }
ark-ff = { version = "0.5", features = ["parallel"] }
ark-serialize = "0.5"
ark-std = "0.5"
light-poseidon = "0.4"
zk-kit-lean-imt = "0.1.1"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
num-bigint = "0.4"
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"

# Util
thiserror = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Runtime on-chain interaction (Funder drives multisig propose/confirm/execute).
alloy = { version = "1", features = [
    "providers",
    "signers",
    "contract",
    "sol-types",
    "node-bindings",
    "network",
    "transports",
    "transport-http",
    "rpc-types",
] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[example]]
name = "bench_proving"
path = "examples/bench_proving.rs"
