[package]
name = "private-payment-shielded-pool-extension"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/lib.rs"

[dependencies]
tokio = { version = "1.49", features = ["full", "process"] }
alloy = { version = "1.1", features = ["node-bindings", "sol-types", "essentials"] }
ark-ff = "0.4.2"
ark-bn254 = "0.4"
light-poseidon = "0.2"
zk-kit-lean-imt = { version = "0.1.1", features = ["stateless"] }
k256 = { version = "0.13", features = ["ecdh"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"
thiserror = "2.0"
rand = "0.8.5"
tracing = "0.1"
simplepir = "1.0.1"
alloy-trie = "0.9"
alloy-rlp = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

# SimplePIR uses intentional wrapping u64 arithmetic (built for release); disable
# overflow-checks for just that dependency so it works under the debug/test
# profile too, without relaxing overflow safety in our own crate.
[profile.dev.package.simplepir]
overflow-checks = false
