[package]
name = "tee_swap"
version = "0.1.0"
authors = ["Meyanis95 <yanis.meziane@essec.edu>"]
edition = "2024"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "e2e"
path = "src/bin/e2e.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "host_proxy"
path = "src/bin/host_proxy.rs"
required-features = ["nitro"]

[[bin]]
name = "testnet"
path = "src/bin/testnet/main.rs"

[dependencies]
# Poseidon
light-poseidon = "0.4.0"
ark-bn254 = "0.5"

# Grumpkin / arkworks
ark-grumpkin = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"

# Ethereum
alloy = { version = "1.1", features = ["sol-types", "essentials", "node-bindings", "serde"] }

# Merkle tree
zk-kit-lean-imt = "0.1"

# RA-TLS server
axum = { version = "0.8", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
x509-parser = "0.16"
sha2 = "0.10"

# RA-TLS client
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"


# CLI
clap = { version = "4", features = ["derive"] }

# Time
humantime = "2"
humantime-serde = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Util
thiserror = "2.0"
rand = "0.8"
hex = "0.4"
tempfile = "3"

# Nitro (optional — only needed when building for enclave)
aws-nitro-enclaves-nsm-api = { version = "0.4", features = ["nix"], optional = true }
tokio-vsock = { version = "0.7", optional = true }
serde_bytes = "0.11"

[features]
default = ["mock-tee"]
mock-tee = []
nitro = ["dep:aws-nitro-enclaves-nsm-api", "dep:tokio-vsock"]
tdx = []         # future: virtee/tdx for real attestation
sev-snp = []     # future: virtee/sev for real attestation
