[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = "0.4.6"
poseidon-rs = "0.0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.4.0", features = ["full"] }
sha3 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
bincode = "1.3"
toml = "0.9.11"
